# dora

./: pyproject.toml  shell.nix
apis/python/node/dora/: __init__.py
apis/python/node/src/: lib.rs
binaries/cli/src/command/node/: list.rs  mod.rs  start.rs  stop.rs
binaries/coordinator/src/: lib.rs  listener.rs
binaries/daemon/: Cargo.toml
binaries/daemon/src/: lib.rs
binaries/daemon/src/spawn/: prepared.rs
binaries/daemon/tests/: node_temporary_stop_restart.rs
examples/python-concurrent-rw/: dataflow.yml  receive_data.py
examples/rust-dataflow/: README-stop-restart.md  README.md  dataflow-restart.yml  dataflow-stop-restart.yml  forwarder.py  producer.py  run_forever.py
libraries/core/: dora-schema.json
libraries/core/src/descriptor/: mod.rs
libraries/extensions/telemetry/metrics/src/: lib.rs
libraries/message/src/: cli_to_coordinator.rs  coordinator_to_cli.rs  coordinator_to_daemon.rs  daemon_to_coordinator.rs  descriptor.rs
